Allowed the user to download a Sale Price List Template and an Import Rate Plan Template
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40281

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -285,7 +285,7 @@
     <Content Include="WhS_Sales\Views\ZoneInfoController.js" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="WhS_Sales\Templates\Import Rate Plan Template.xls" />
+    <Content Include="WhS_Sales\Templates\Import Rate Plan Template.xlsx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
