Implmenting inv to acc balance relation and invoice source
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40285

--- a/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Entities/Vanrise.InvToAccBalanceRelation.Entities.csproj
+++ b/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Entities/Vanrise.InvToAccBalanceRelation.Entities.csproj
@@ -46,6 +46,8 @@
     <Compile Include="BalanceAccountInfo.cs" />
     <Compile Include="InvoiceAccountInfo.cs" />
     <Compile Include="InvToAccBalanceRelationDefinition.cs" />
+    <Compile Include="InvToAccBalanceRelationDefinitionInfo.cs" />
+    <Compile Include="InvToAccBalanceRelationDefinitionInfoFilter.cs" />
     <Compile Include="RelationDefinitionExtendedSettingsConfig.cs" />
     <Compile Include="InvToAccBalanceRelationDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
