--- a/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Business/Vanrise.InvToAccBalanceRelation.Business.csproj
+++ b/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Business/Vanrise.InvToAccBalanceRelation.Business.csproj
@@ -43,11 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvoiceSummaryFieldSourceSetting.cs" />
     <Compile Include="InvToAccBalanceRelationDefinitionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelationDefinitionManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.AccountBalance.Business\Vanrise.AccountBalance.Business.csproj">
+      <Project>{6e2ff40b-84c5-4c36-b346-6202d0e70a92}</Project>
+      <Name>Vanrise.AccountBalance.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.AccountBalance.Entities\Vanrise.AccountBalance.Entities.csproj">
+      <Project>{5111e97a-c9ab-4bef-8f75-32cc46526074}</Project>
+      <Name>Vanrise.AccountBalance.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Common.Business\Vanrise.Common.Business.csproj">
       <Project>{571a68ec-2d45-4b5c-9e75-bb6fb7c0d7b7}</Project>
       <Name>Vanrise.Common.Business</Name>
@@ -59,6 +67,22 @@
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.GenericData.Entities\Vanrise.GenericData.Entities.csproj">
+      <Project>{4ab1e86a-c33a-4fd4-bd00-6c5b12f5f337}</Project>
+      <Name>Vanrise.GenericData.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.GenericData.MainExtensions\Vanrise.GenericData.MainExtensions.csproj">
+      <Project>{9fba4641-edd5-4a59-a053-ce879f31ad14}</Project>
+      <Name>Vanrise.GenericData.MainExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Invoice.Business\Vanrise.Invoice.Business.csproj">
+      <Project>{3fc94003-b550-4f8d-b31e-0d389dccc801}</Project>
+      <Name>Vanrise.Invoice.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Invoice.Entities\Vanrise.Invoice.Entities.csproj">
+      <Project>{af8043ce-bc7c-445a-8c02-af023f5bdd68}</Project>
+      <Name>Vanrise.Invoice.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.InvToAccBalanceRelation.Entities\Vanrise.InvToAccBalanceRelation.Entities.csproj">
       <Project>{40e7f748-caef-4dab-a955-e2b62cb5db79}</Project>
