--- a/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Web/Vanrise.InvToAccBalanceRelation.Web.csproj
+++ b/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Web/Vanrise.InvToAccBalanceRelation.Web.csproj
@@ -127,12 +127,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="VR_InvToAccBalanceRelation\Constant\ModuleConfig.js" />
+    <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Directives\MainExtensions\Templates\InvoiceSummarySourceSetting.html" />
+    <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Directives\MainExtensions\vr-accountbalance-accounttype-source-invoicesummary.js" />
     <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Directives\Templates\VRInvToAccBalanceRelationDefinitionSettings.html" />
     <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Directives\vr-invtoaccbalancerelation-definition-extendedsettings.js" />
+    <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Directives\vr-invtoaccbalancerelation-definition-selector.js" />
     <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Directives\vr-invtoaccbalancerelation-definition-settings.js" />
     <Content Include="VR_InvToAccBalanceRelation\Elements\InvToAccBalanceRelationDefinition\Services\APIServies\InvToAccBalanceRelationDefinitionAPIService.js" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
