--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GeneratedInvoice\GeneratedInvoiceItem.cs" />
     <Compile Include="GeneratedInvoice\GeneratedInvoiceItemSet.cs" />
     <Compile Include="IInvoicePartnerFilter.cs" />
+    <Compile Include="InvoiceByPartnerInvoiceType.cs" />
     <Compile Include="InvoiceGeneratorException.cs" />
     <Compile Include="InvoiceItem\ConvertItemGroupingToGridColumnAttributeInput.cs" />
     <Compile Include="InvoiceItem\GroupingInvoiceItemDetail.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="PartnerInvoiceSetting\PartnerInvoiceSetting.cs" />
     <Compile Include="PartnerInvoiceSetting\PartnerInvoiceSettingDetail.cs" />
     <Compile Include="PartnerInvoiceSetting\PartnerInvoiceSettingQuery.cs" />
+    <Compile Include="PartnerInvoiceType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RDLCBankDetails.cs" />
     <Compile Include="RDLCTaxItemDetail.cs" />
