--- a/Vanrise/Code/Vanrise.Notification.Entities/Vanrise.Notification.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Entities/Vanrise.Notification.Entities.csproj
@@ -61,6 +61,7 @@
     <Compile Include="BalanceAlertRule\IVREntityBalanceInfo.cs" />
     <Compile Include="BalanceAlertRule\VRBalanceUpdateLastAlertInfoPayload.cs" />
     <Compile Include="BalanceAlertRule\VRBalanceUpdateRuleInfoPayload.cs" />
+    <Compile Include="VRAlertLevel\IVRALertLevelFilter.cs" />
     <Compile Include="VRAlertLevel\VRAlertLevel.cs" />
     <Compile Include="VRAlertLevel\VRAlertLevelDetail.cs" />
     <Compile Include="VRAlertLevel\VRAlertLevelInfo.cs" />
