--- a/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="DataRecord\DataRecordActionRuleExtendedSettings.cs" />
+    <Compile Include="DataRecord\DataRecordActionRuleTypeSettings.cs" />
     <Compile Include="DataRecord\DataRecordActionTargetType.cs" />
     <Compile Include="DataRecord\DataRecordAlertRuleConfig.cs" />
     <Compile Include="DataRecord\DataRecordAlertRuleManager.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="DataRecord\DataRecordSendEmailDefinitionSettings.cs" />
     <Compile Include="DataRecord\DataRecordAlertRuleActionEventPayload.cs" />
     <Compile Include="DataRecord\RecordFilterAlertRuleConfig.cs" />
+    <Compile Include="Filters\IVRNotificationTypeFilter\DataRecordNotificationTypeFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
