Implementing due amount for invoicesummary
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40305

--- a/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
@@ -76,6 +76,7 @@
     <Compile Include="BillingTransactionType\BillingTransactionTypeInfoFilter.cs" />
     <Compile Include="BillingTransactionType\IBillingTransactionTypeFilter.cs" />
     <Compile Include="BillingTransactionType\ManualAddEnabledBillingTransactionTypeFilter.cs" />
+    <Compile Include="BillingTransaction\BillingTransactionByTime.cs" />
     <Compile Include="BillingTransaction\BillingTransactionViewSettings.cs" />
     <Compile Include="BillingTransaction\BillingTransactionBatch.cs" />
     <Compile Include="BillingTransaction\BillingTransactionDetail.cs" />
