--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Business/Vanrise.BusinessProcess.Business.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Business/Vanrise.BusinessProcess.Business.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BPBusinessRuleActionManager.cs" />
     <Compile Include="BPBusinessRuleActionTypeManager.cs" />
     <Compile Include="BPBusinessRuleDefinitionManager.cs" />
+    <Compile Include="BPDefinitionScheduleTaskFilter.cs" />
     <Compile Include="BPEventManager.cs" />
     <Compile Include="BPTaskTypeManager.cs" />
     <Compile Include="BPTaskManager.cs" />
