minor security bugs and added requiredpermissionset to technical log
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40328

--- a/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
+++ b/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
@@ -79,8 +79,10 @@
   <ItemGroup>
     <Compile Include="BusinessManagers\BusinessManagerFactory.cs" />
     <Compile Include="BusinessManagers\IBusinessManager.cs" />
+    <Compile Include="BusinessManagers\ISecurityRequiredPermissionSetManager.cs" />
     <Compile Include="BusinessManagers\ITypeManager.cs" />
     <Compile Include="BusinessManagers\IVRActionLogger.cs" />
+    <Compile Include="BusinessManagers\SecBusinessManagerFactory.cs" />
     <Compile Include="DataRetrieval\ConvertResultToExcelDataContext.cs" />
     <Compile Include="DataRetrieval\RemoteExcelManager.cs" />
     <Compile Include="DataRetrieval\ExcelManager.cs" />
