added Tracking to Account Synchronizer Add and Update
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40330

--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -141,5 +141,13 @@
     <add key="Retail_Analytics_DBConnStringKey"                 value="RetailAnalyticsDBConnString"/>
 
     <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
-  </appSettings>  
+  </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">      
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
