--- a/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
@@ -72,7 +72,7 @@
     <Compile Include="DataRecord\RecordFilterAlertRuleConfig.cs" />
     <Compile Include="Filters\IVRNotificationTypeFilter\DataRecordNotificationTypeFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueueActivators\CheckActionRulesQueueActivator.cs" />
+    <Compile Include="DataRecord\QueueActivators\DataRecordCheckActionRulesQueueActivator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common.Business\Vanrise.Common.Business.csproj">
