Data Analysis processing alert rules
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40350

--- a/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DataAnalysis\DAGetMeasureValueContext.cs" />
     <Compile Include="DataAnalysis\DAProfCalcDataRecordStorageFilter.cs" />
     <Compile Include="DataAnalysis\DAProfCalcNotificationTypeFilter.cs" />
+    <Compile Include="DataAnalysis\DAProfCalcNotificationManager.cs" />
     <Compile Include="DataAnalysis\DAProfCalcStoreEventsOutputProcessor.cs" />
     <Compile Include="DataAnalysis\DAProfCalcGenerateVRAlertEventsOutputProcessor.cs" />
     <Compile Include="DataAnalysis\DAProfCalcOutputSettingsManager.cs" />
