--- a/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
@@ -115,9 +115,7 @@
       <Name>Vanrise.Web.Base</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Filters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
