Implementing PriceList Changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40366

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
@@ -139,6 +139,7 @@
     <Compile Include="SetCPContext.cs" />
     <Compile Include="StructureDataByCountries.cs" />
     <Compile Include="StructureDataByZones.cs" />
+    <Compile Include="StructureSalePriceListZoneChange.cs" />
     <Compile Include="SyncImportedDataWithDB.cs" />
     <Compile Include="PrepareChangedCodesForApply.cs" />
     <Compile Include="PrepareChangedZonesForApply.cs" />
