--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReserveIdsForNewEntities.cs" />
     <Compile Include="StructureDataByZones.cs" />
+    <Compile Include="StructureSalePriceListZoneChange.cs" />
     <Compile Include="SyncImportedDataWithDB.cs" />
     <Compile Include="UpdateState.cs" />
     <Compile Include="UpdateZonesData.cs" />
