implementing object tracking drill down in analytic report
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40379

--- a/Vanrise/Code/Vanrise.Analytic.Web/Vanrise.Analytic.Web.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Vanrise.Analytic.Web.csproj
@@ -268,6 +268,7 @@
     <Content Include="Analytic\Directives\Runtime\Grid\vr-analytic-datagrid-analyticrecords.js" />
     <Content Include="Analytic\Directives\Definition\MainExtensions\AnalyticReport\History\SearchSettings\Templates\GenericSearchTemplate.html" />
     <Content Include="Analytic\Directives\Definition\MainExtensions\AnalyticReport\History\SearchSettings\vr-analytic-reportsearchsettings-genericsearch.js" />
+    <Content Include="Analytic\ModuleInitialization.js" />
     <Content Include="Analytic\Services\AnalyticItemActionService.js" />
     <Content Include="Analytic\Services\AnalyticItemConfigService.js" />
     <Content Include="Analytic\Services\AnalyticReportService.js" />
