--- a/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
+++ b/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
@@ -214,6 +214,7 @@
     <Content Include="Common\Directives\GeneralSettings\vr-common-ui-settings-editor.js" />
     <Content Include="Common\Directives\GeneralSettings\vr-common-general-settings-editor.js" />
     <Content Include="Common\Directives\GeneralSettings\vr-common-pagesize-selector.js" />
+    <Content Include="Common\Directives\GridColCSSClass\vr-common-gridcolcssclass-selector.js" />
     <Content Include="Common\Directives\GridColumnWidth\vr-common-gridcolumnwidth-editor.js" />
     <Content Include="Common\Directives\MainExtensions\ConnectionTypes\Templates\SQLConnectionEditorTemplate.html" />
     <Content Include="Common\Directives\MainExtensions\ConnectionTypes\Templates\InterAppRestConnectionEditorTemplate.html" />
