Implement CreateObject on VRObjectType
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40396

--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -539,6 +539,12 @@
     <Reference Include="Vanrise.Invoice.Web">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Web.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.InvToAccBalanceRelation.Business">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.InvToAccBalanceRelation.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.InvToAccBalanceRelation.Entities">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.InvToAccBalanceRelation.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Logging.SQL">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Logging.SQL.dll</HintPath>
     </Reference>
@@ -882,6 +888,10 @@
     <ProjectReference Include="..\TOne.WhS.Invoice.Business\TOne.WhS.Invoice.Business.csproj">
       <Project>{3751a44f-a40a-4e0e-a86e-5665664ce616}</Project>
       <Name>TOne.WhS.Invoice.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.InvToAccBalanceRelation.Business\TOne.WhS.InvToAccBalanceRelation.Business.csproj">
+      <Project>{f99abd6c-3d5c-40c2-8d37-de2f9707b038}</Project>
+      <Name>TOne.WhS.InvToAccBalanceRelation.Business</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.RouteSync.BP.Activities\TOne.WhS.RouteSync.BP.Activities.csproj">
       <Project>{6af7a0ad-f82d-4b4c-9085-0fe891b78863}</Project>
